--- a/css/massagetheme.css
+++ b/css/massagetheme.css
@@ -3,6 +3,10 @@ body {
   padding-bottom: 0px;
 }
 
+h1 h2 h3 h4 h5 h6 p div {
+	font-family: 'Raleway', 'Goudy+Bookletter+1911', sans-serif;
+}
+
 .theme-dropdown .dropdown-menu {
   position: static;
   display: block;
@@ -23,4 +27,10 @@ body {
 .banner img {
 	height: auto;
 	max-width: 100%;
+}
+
+.map {
+	border: 5px solid blue;
+	display: inline-block;
+	width: 420px;
 }
