--- a/css/massagetheme.css
+++ b/css/massagetheme.css
@@ -1,10 +1,15 @@
 body {
   padding-top: 0px;
   padding-bottom: 0px;
+  font-family: "Raleway", sans-serif;
 }
 
-h1 h2 h3 h4 h5 h6 p div {
-	font-family: 'Raleway', 'Goudy+Bookletter+1911', sans-serif;
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+	font-family: "Raleway", sans-serif;
+}
+
+p, div {
+	font-family: "Raleway", sans-serif;
 }
 
 .theme-dropdown .dropdown-menu {
