--- a/css/massagetheme.css
+++ b/css/massagetheme.css
@@ -44,6 +44,16 @@ p, div {
 	width: 100%;
 }
 
+.well {
+	margin-top: 50px;
+	margin-bottom: 0px;
+}
+
+.photo {
+	border-radius: 50%;
+	margin: -30px auto 20px auto;
+}
+
 .map {
 	border: 5px solid blue;
 	display: inline-block;
