--- a/css/massagetheme.css
+++ b/css/massagetheme.css
@@ -47,12 +47,13 @@ p, div {
 
 .well {
 	padding: 50px;
-	margin-bottom: 20px;
+	margin: 20px auto;
 }
 
 .photo {
 	border-radius: 50%;
 	margin: -30px auto 20px auto;
+	max-width: 150px;
 }
 
 .map {
@@ -60,3 +61,28 @@ p, div {
 	display: inline-block;
 	width: 420px;
 }
+
+.form {
+  position: relative;
+  padding-bottom: 55%;
+  height: 0;
+  overflow: hidden;
+	max-width: 90%;
+	min-width: 80%;
+	margin: 30px auto;
+}
+
+.form iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+
+
+
