--- a/css/massagetheme.css
+++ b/css/massagetheme.css
@@ -57,6 +57,16 @@ p, div {
 	max-width: 150px;
 }
 
+.items {
+	text-align: center;
+}
+
+.stone {
+	border-radius: 50%;
+	max-width: 100px;
+	margin: 40px auto 0 auto;
+}
+
 .map {
 	border: 5px solid blue;
 	display: inline-block;
