--- a/css/massagetheme.css
+++ b/css/massagetheme.css
@@ -46,13 +46,13 @@ p, div {
 }
 
 .well {
-	padding: 50px;
+	padding: 30px;
 	margin: 20px auto;
 }
 
-.info {
-	float:left;
-}
+/*.info {
+	margin: 10px;
+}*/
 
 .photo {
 	border-radius: 50%;
