--- a/css/massagetheme.css
+++ b/css/massagetheme.css
@@ -156,10 +156,27 @@ p, div {
 /* End Pulse */
 
 
+div.well.info {
+	box-shadow: none;
+	border: 0px;
+	background: transparent;
+}
+
 .map {
-	border: 5px solid blue;
-	display: inline-block;
-	width: 420px;
+  position: relative;
+  height: 320px;
+  overflow: hidden;
+	max-width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.map iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .form {
